# c-of-time

./: Makefile  pyproject.toml
patches/: internal.asm  patch.asm
src/: main.c
