[tool.poetry]
name = "toto"
version = "0.1.0"
description = ""
authors = ["Arthur Chaloin <arthur.chaloin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
keystone-engine = "^0.9.2"
ndspy = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
